--- a/src/app/customer/pages/product-details/product-details.html
+++ b/src/app/customer/pages/product-details/product-details.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-shared-header></app-shared-header>
 
 <nav class="text-sm text-slate-600 mb-4 flex items-center gap-2">
   <a routerLink="/" class="hover:underline">Home</a>
@@ -43,3 +43,5 @@
     </div>
   </div>
 </div>
+
+<app-shared-footer></app-shared-footer>
